Veritabanı Bağlanma Denemeleri

--- a/PhoneBook/appsettings.json
+++ b/PhoneBook/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnection": "Server=localhost;Port=5432;Database=TutorialDB;User Id=postgres;Password=postgres;"
+  }
 }
