--- a/PhoneBook/PhoneBook.csproj
+++ b/PhoneBook/PhoneBook.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
+	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
